slider contros z-index fix

--- a/layout/src/core/sliders/_sliders_homepage.scss
+++ b/layout/src/core/sliders/_sliders_homepage.scss
@@ -28,47 +28,30 @@ $slider_height: 450px;
     }
 
     @include media-breakpoint-only(xl) {
-        .carousel-indicators {}
+        // .carousel-indicators {}
 
-        // .carousel-control-next,
         // .carousel-control-prev {
-        //     position: absolute;
-        //     top: 0;
-        //     bottom: 0;
-        //     z-index: 1;
-        //     display: flex;
-        //     align-items: center;
-        //     justify-content: center;
-        //     width: 15%;
-        //     color: white;
-        //     text-align: center;
-        //     opacity: .5;
-        //     transition: opacity .15s ease;
+        //     .carousel-control-prev-icon {}
         // }
-
-        .carousel-control-prev {
-            .carousel-control-prev-icon {}
-        }
-        .carousel-control-next {
-            .carousel-control-next-icon {}
-        }
-
-        .carousel-inner {
-            .carousel-item {
-                .carousel-caption {}
-            }
-        }
+        // .carousel-control-next {
+        //     .carousel-control-next-icon {}
+        // }
+        //
+        // .carousel-inner {
+        //     .carousel-item {
+        //         .carousel-caption {}
+        //     }
+        // }
 
         #controls-desktop-wrap {
             position: relative;
-            z-index: 2;
         }
 
         #controls-desktop {
             position: absolute;
             right: 15px;
             bottom: 47px;
-            // z-index: 2;
+            z-index: 11;
 
             display: flex;
             align-items: center;
@@ -85,8 +68,6 @@ $slider_height: 450px;
                 }
 
                 .control-left {
-                    // background-position: 100% 0;
-
                     &:hover {
                         transform: translate3d(-3px, 0, 0);
                     }
